--- a/Neuronix-Labs/appsettings.json
+++ b/Neuronix-Labs/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Neuronix-Labs-DB;TrustServerCertificate=True;Trusted_Connection=True"
+    "DefaultConnection": "Server=103.152.101.111;Database=Neuronix-Labs-DB;User Id=myUser;Password='mySecurePassword';TrustServerCertificate=True"
   }
 }
